# src/Api/Services/Notifications/NotificationsResponseManager.php
@@ -13,6 +13,8 @@ use App\DB\Entity\User\Notifications\NewProgramNotification;
 use App\DB\Entity\User\Notifications\RemixNotification;
 use App\DB\Entity\User\User;
 use App\DB\EntityRepository\User\Notification\NotificationRepository;
+use OpenAPI\Server\Model\NotificationListResponse;
+use OpenAPI\Server\Model\NotificationResponse;
 use OpenAPI\Server\Model\NotificationsCountResponse;
 use OpenAPI\Server\Service\SerializerInterface;
 use Symfony\Contracts\Translation\TranslatorInterface;
@@ -61,6 +63,133 @@ class NotificationsResponseManager extends AbstractResponseManager
       'follower' => $followers,
       'comment' => $comments,
       'remix' => $remixes,
+    ]);
+  }
+
+  /**
+   * @param CatroNotification[] $notifications
+   */
+  public function createNotificationListResponse(array $notifications, bool $has_more, User $user): NotificationListResponse
+  {
+    $response_items = [];
+
+    foreach ($notifications as $notification) {
+      $item = $this->createNotificationResponse($notification, $user);
+      if (null !== $item) {
+        $response_items[] = $item;
+      }
+    }
+
+    $next_cursor = null;
+    if ($has_more && [] !== $response_items) {
+      $last = end($response_items);
+      $next_cursor = base64_encode((string) $last->getId());
+    }
+
+    return new NotificationListResponse([
+      'data' => $response_items,
+      'next_cursor' => $next_cursor,
+      'has_more' => $has_more,
+    ]);
+  }
+
+  private function createNotificationResponse(CatroNotification $notification, User $user): ?NotificationResponse
+  {
+    if ($notification instanceof LikeNotification) {
+      if ($notification->getLikeFrom() === $user) {
+        return null;
+      }
+
+      return new NotificationResponse([
+        'id' => $notification->getId(),
+        'type' => 'reaction',
+        'seen' => $notification->getSeen(),
+        'from' => $notification->getLikeFrom()?->getId(),
+        'from_name' => $notification->getLikeFrom()?->getUserIdentifier(),
+        'project' => $notification->getProgram()?->getId(),
+        'project_name' => $notification->getProgram()?->getName(),
+        'avatar' => $notification->getLikeFrom()?->getAvatar(),
+        'message' => $this->trans('catro-notifications.like.message'),
+      ]);
+    }
+
+    if ($notification instanceof FollowNotification) {
+      if ($notification->getFollower() === $user) {
+        return null;
+      }
+
+      return new NotificationResponse([
+        'id' => $notification->getId(),
+        'type' => 'follow',
+        'seen' => $notification->getSeen(),
+        'from' => $notification->getFollower()->getId(),
+        'from_name' => $notification->getFollower()->getUserIdentifier(),
+        'avatar' => $notification->getFollower()->getAvatar(),
+        'message' => $this->trans('catro-notifications.follow.message'),
+      ]);
+    }
+
+    if ($notification instanceof NewProgramNotification) {
+      if ($notification->getProgram()?->getUser() === $user) {
+        return null;
+      }
+
+      return new NotificationResponse([
+        'id' => $notification->getId(),
+        'type' => 'follow',
+        'seen' => $notification->getSeen(),
+        'from' => $notification->getProgram()?->getUser()?->getId(),
+        'from_name' => $notification->getProgram()?->getUser()?->getUserIdentifier(),
+        'project' => $notification->getProgram()?->getId(),
+        'project_name' => $notification->getProgram()?->getName(),
+        'avatar' => $notification->getProgram()?->getUser()?->getAvatar(),
+        'message' => $this->trans('catro-notifications.project-upload.message'),
+      ]);
+    }
+
+    if ($notification instanceof CommentNotification) {
+      if ($notification->getComment()?->getUser() === $user) {
+        return null;
+      }
+
+      return new NotificationResponse([
+        'id' => $notification->getId(),
+        'type' => 'comment',
+        'seen' => $notification->getSeen(),
+        'from' => $notification->getComment()?->getUser()?->getId(),
+        'from_name' => $notification->getComment()?->getUser()?->getUserIdentifier(),
+        'project' => $notification->getComment()?->getProgram()?->getId(),
+        'project_name' => $notification->getComment()?->getProgram()?->getName(),
+        'avatar' => $notification->getComment()?->getUser()?->getAvatar(),
+        'message' => $this->trans('catro-notifications.comment.message'),
+      ]);
+    }
+
+    if ($notification instanceof RemixNotification) {
+      if ($notification->getRemixFrom() === $user) {
+        return null;
+      }
+
+      return new NotificationResponse([
+        'id' => $notification->getId(),
+        'type' => 'remix',
+        'seen' => $notification->getSeen(),
+        'from' => $notification->getRemixFrom()?->getId(),
+        'from_name' => $notification->getRemixFrom()?->getUserIdentifier(),
+        'project' => $notification->getRemixProgram()?->getId(),
+        'project_name' => $notification->getRemixProgram()?->getName(),
+        'avatar' => $notification->getRemixFrom()?->getAvatar(),
+        'remixed_project' => $notification->getProgram()?->getId(),
+        'remixed_project_name' => $notification->getProgram()?->getName(),
+        'message' => $this->trans('catro-notifications.remix.message'),
+      ]);
+    }
+
+    return new NotificationResponse([
+      'id' => $notification->getId(),
+      'type' => 'other',
+      'seen' => $notification->getSeen(),
+      'message' => $notification->getMessage(),
     ]);
   }
 }
