# src/DB/EntityRepository/User/Notification/NotificationRepository.php
@@ -6,10 +6,14 @@ namespace App\DB\EntityRepository\User\Notification;
 
 use App\DB\Entity\Project\Program;
 use App\DB\Entity\User\Notifications\CatroNotification;
+use App\DB\Entity\User\Notifications\CommentNotification;
 use App\DB\Entity\User\Notifications\FollowNotification;
 use App\DB\Entity\User\Notifications\LikeNotification;
+use App\DB\Entity\User\Notifications\NewProgramNotification;
+use App\DB\Entity\User\Notifications\RemixNotification;
 use App\DB\Entity\User\User;
 use Doctrine\Bundle\DoctrineBundle\Repository\ServiceEntityRepository;
+use Doctrine\ORM\QueryBuilder;
 use Doctrine\Persistence\ManagerRegistry;
 
 /**
@@ -97,5 +101,52 @@ class NotificationRepository extends ServiceEntityRepository
       ->getQuery()
       ->execute()
     ;
+  }
+
+  /**
+   * @return array{notifications: CatroNotification[], has_more: bool}
+   */
+  public function getNotificationsPageData(User $user, string $type, int $limit, ?int $cursor_id): array
+  {
+    $qb = $this->getEntityManager()->createQueryBuilder();
+
+    $qb
+      ->select('n')
+      ->from(CatroNotification::class, 'n')
+      ->where('n.user = :user')
+      ->setParameter('user', $user)
+      ->orderBy('n.id', 'DESC')
+      ->setMaxResults($limit + 1)
+    ;
+
+    $this->applyTypeFilter($qb, $type);
+
+    if (null !== $cursor_id) {
+      $qb
+        ->andWhere('n.id < :cursor_id')
+        ->setParameter('cursor_id', $cursor_id)
+      ;
+    }
+
+    /** @var CatroNotification[] $results */
+    $results = $qb->getQuery()->getResult();
+
+    $has_more = count($results) > $limit;
+    if ($has_more) {
+      array_pop($results);
+    }
+
+    return ['notifications' => $results, 'has_more' => $has_more];
+  }
+
+  private function applyTypeFilter(QueryBuilder $qb, string $type): void
+  {
+    match ($type) {
+      'reaction' => $qb->andWhere('n INSTANCE OF '.LikeNotification::class),
+      'follow' => $qb->andWhere('n INSTANCE OF '.FollowNotification::class.' OR n INSTANCE OF '.NewProgramNotification::class),
+      'comment' => $qb->andWhere('n INSTANCE OF '.CommentNotification::class),
+      'remix' => $qb->andWhere('n INSTANCE OF '.RemixNotification::class),
+      default => null,
+    };
   }
 }
